--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -7,29 +7,33 @@
   <!-- 사용자 스크립트 추가 -->
   <th:block layout:fragment="script">
     <script th:inline="javascript">
-      $(document).ready(function(){
-          var errorMessage = [[${errorMessage}]];
-          if(errorMessage != null){
-              alert(errorMessage);
-          }
-
-          bindDomEvent();
-
+      $(document).ready(function () {
+        var errorMessage = /*[[${errorMessage}]]*/ null;
+        if (errorMessage) {
+          alert(errorMessage);
+        }
+        bindDomEvent();
       });
 
-      function bindDomEvent(){
-          $(".custom-file-input").on("change", function() {
-              var fileName = $(this).val().split("\\").pop();  //이미지 파일명
-              var fileExt = fileName.substring(fileName.lastIndexOf(".")+1); // 확장자 추출
-              fileExt = fileExt.toLowerCase(); //소문자 변환
+      function bindDomEvent() {
+        $(".custom-file-input").on("change", function () {
+          var fileName = $(this).val().split("\\").pop(); //이미지 파일명
+          var fileExt = fileName.substring(fileName.lastIndexOf(".") + 1); // 확장자 추출
+          fileExt = fileExt.toLowerCase(); //소문자 변환
 
-              if(fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp"){
-                  alert("이미지 파일만 등록이 가능합니다.");
-                  return;
-              }
+          if (
+            fileExt != "jpg" &&
+            fileExt != "jpeg" &&
+            fileExt != "gif" &&
+            fileExt != "png" &&
+            fileExt != "bmp"
+          ) {
+            alert("이미지 파일만 등록이 가능합니다.");
+            return;
+          }
 
-              $(this).siblings(".custom-file-label").html(fileName);
-          });
+          $(this).siblings(".custom-file-label").html(fileName);
+        });
       }
     </script>
   </th:block>
