--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,89 +1,167 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}">
-
-<!-- 사용자 CSS 추가 -->
-<th:block layout:fragment="css">
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{layouts/layout1}"
+>
+  <!-- 사용자 CSS 추가 -->
+  <th:block layout:fragment="css">
     <style>
-        .carousel-inner > .item {
-            height: 350px;
-        }
-        .margin{
-            margin-bottom:30px;
-        }
-        .banner{
-            height: 300px;
-            position: absolute; top:0; left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .card-text{
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-        a:hover{
-            text-decoration:none;
-        }
-        .center{
-            text-align:center;
-        }
+      .carousel-inner > .item {
+        height: 350px;
+      }
+      .margin {
+        margin-bottom: 30px;
+      }
+      .banner {
+        height: 300px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      .card-text {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+      }
+      a:hover {
+        text-decoration: none;
+      }
+      .center {
+        text-align: center;
+      }
     </style>
-</th:block>
+  </th:block>
 
-<div layout:fragment="content">
+  <!-- 사용자 스크립트 추가 -->
+  <th:block layout:fragment="script">
+    <script th:inline="javascript">
+      var errorMessage = /*[[${errorMessage}]]*/ null;
+      if (errorMessage) {
+        alert(errorMessage);
+      }
+      var successMessage = /*[[${successMessage}]]*/ null;
+      if (successMessage) {
+        alert(successMessage);
+      }
+    </script>
+  </th:block>
 
-    <div id="carouselControls" class="carousel slide margin" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active item">
-                <img class="d-block w-100 banner" src="https://user-images.githubusercontent.com/13268420/112147492-1ab76200-8c20-11eb-8649-3d2f282c3c02.png" alt="First slide">
-            </div>
+  <div layout:fragment="content">
+    <div
+      id="carouselControls"
+      class="carousel slide margin"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active item">
+          <img
+            class="d-block w-100 banner"
+            src="https://user-images.githubusercontent.com/13268420/112147492-1ab76200-8c20-11eb-8649-3d2f282c3c02.png"
+            alt="First slide"
+          />
         </div>
+      </div>
     </div>
 
-    <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
-    <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
-        <p class="h3 font-weight-bold" th:text="${itemSearchDto.searchQuery} + '검색 결과'"></p>
+    <!-- 검색 쿼리가 비어있지 않은 경우에 검색 결과를 표시 -->
+    <input
+      type="hidden"
+      name="searchQuery"
+      th:value="${itemSearchDto.searchQuery}"
+    />
+    <div
+      th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}"
+      class="container mt-4"
+    >
+      <div class="text-center">
+        <h1
+          class="display-4 mb-3"
+          th:text="${itemSearchDto.searchQuery + ' 검색 결과'}"
+        ></h1>
+      </div>
     </div>
 
-    <div class="row">
+    <!-- 검색 결과가 없는 경우 "등록된 상품이 없습니다" 메시지를 표시 -->
+    <div th:if="${items.empty}">
+      <div class="row">
+        <p class="h3 font-weight-bold">등록된 상품이 없습니다</p>
+      </div>
+    </div>
+
+    <!-- 검색 결과가 있는 경우 검색 결과를 표시 -->
+    <div th:if="${not items.empty}">
+      <div class="row">
+        <!-- 검색 결과 목록을 표시 -->
         <th:block th:each="item, status: ${items.getContent()}">
-            <div class="col-md-4 margin">
-                <div class="card">
-                    <a th:href="'/item/' +${item.id}" class="text-dark">
-                        <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
-                        <div class="card-body">
-                            <h4 class="card-title">[[${item.itemNm}]]</h4>
-                            <p class="card-text">[[${item.itemDetail}]]</p>
-                            <h3 class="card-title text-danger">[[${item.price}]]원</h3>
-                        </div>
-                    </a>
-                </div>
+          <div class="col-md-4 mb-4">
+            <div class="card shadow">
+              <a th:href="'/item/' + ${item.id}" class="text-dark"
+                ><img
+                  th:src="${item.imgUrl}"
+                  class="card-img-top"
+                  th:alt="${item.itemNm}"
+                  height="400" />
+                <div class="card-body">
+                  <h4 class="card-title" th:text="${item.itemNm}"></h4>
+                  <p class="card-text" th:text="${item.itemDetail}"></p>
+                  <h3
+                    class="card-title text-danger"
+                    th:text="${item.price} + '원'"
+                  ></h3></div
+              ></a>
             </div>
+          </div>
         </th:block>
+      </div>
     </div>
 
-    <div th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" >
-        <ul class="pagination justify-content-center">
-
-            <li class="page-item" th:classappend="${items.number eq 0}?'disabled':''">
-                <a th:href="@{'/' + '?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number-1}}" aria-label='Previous' class="page-link">
-                    <span aria-hidden='true'>Previous</span>
-                </a>
-            </li>
-
-            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${items.number eq page-1}?'active':''">
-                <a th:href="@{'/' +'?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${page-1}}" th:inline="text" class="page-link">[[${page}]]</a>
-            </li>
-
-            <li class="page-item" th:classappend="${items.number+1 ge items.totalPages}?'disabled':''">
-                <a th:href="@{'/' +'?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number+1}}" aria-label='Next' class="page-link">
-                    <span aria-hidden='true'>Next</span>
-                </a>
-            </li>
-
+    <div
+      th:with="start=${(items.number / maxPage) * maxPage + 1}, end=${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)}"
+    >
+      <!-- 페이지네이션을 검색 결과가 있는 경우에만 표시 -->
+      <th:block th:if="${items.totalElements > 0}">
+        <ul class="pagination justify-content-center mt-4">
+          <li
+            class="page-item"
+            th:classappend="${items.number eq 0} ? 'disabled' : ''"
+          >
+            <a
+              th:href="@{'/?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number - 1}}"
+              aria-label="Previous"
+              class="page-link"
+            >
+              <span aria-hidden="true">Previous</span>
+            </a>
+          </li>
+          <li
+            class="page-item"
+            th:each="page: ${#numbers.sequence(start, end)}"
+            th:classappend="${items.number eq page - 1} ? 'active' : ''"
+          >
+            <a
+              th:href="@{'/?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${page - 1}}"
+              th:inline="text"
+              class="page-link"
+              th:text="${page}"
+            ></a>
+          </li>
+          <li
+            class="page-item"
+            th:classappend="${items.number + 1 >= items.totalPages} ? 'disabled' : ''"
+          >
+            <a
+              th:href="@{'/?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number + 1}}"
+              aria-label="Next"
+              class="page-link"
+            >
+              <span aria-hidden="true">Next</span>
+            </a>
+          </li>
         </ul>
+      </th:block>
     </div>
-
-</div>
+  </div>
+</html>
