--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -59,7 +59,7 @@
         <div class="carousel-item active item">
           <img
             class="d-block w-100 banner"
-            src="https://user-images.githubusercontent.com/13268420/112147492-1ab76200-8c20-11eb-8649-3d2f282c3c02.png"
+            src="https://img.freepik.com/free-photo/sales-with-paper-bags-concept-on-orange-background-and-copy-space_23-2148305926.jpg?w=1380&t=st=1698239407~exp=1698240007~hmac=6fa25dac1e1791fbe1c72a67d623fb4f3049ade5e519b26aede0d576a4b211aa"
             alt="First slide"
           />
         </div>
