--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -72,7 +72,7 @@
               alert("로그인 후 이용해주세요");
               location.href = "/members/login";
             } else {
-              alert(jqXHR.responseJSON.message);
+              alert(jqXHR.responseText);
             }
           },
         });
@@ -85,27 +85,29 @@
 
         var url = "/cartItem/" + cartItemId;
 
-        $.ajax({
-          url: url,
-          type: "DELETE",
-          beforeSend: function (xhr) {
-            /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-            xhr.setRequestHeader(header, token);
-          },
-          dataType: "json",
-          cache: false,
-          success: function (result, status) {
-            location.href = "/cart";
-          },
-          error: function (jqXHR, status, error) {
-            if (jqXHR.status == "401") {
-              alert("로그인 후 이용해주세요");
-              location.href = "/members/login";
-            } else {
-              alert(jqXHR.responseJSON.message);
-            }
-          },
-        });
+        if (confirm("삭제하시겠습니까?")) {
+          $.ajax({
+            url: url,
+            type: "DELETE",
+            beforeSend: function (xhr) {
+              /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+              xhr.setRequestHeader(header, token);
+            },
+            dataType: "json",
+            cache: false,
+            success: function (result, status) {
+              location.href = "/cart";
+            },
+            error: function (jqXHR, status, error) {
+              if (jqXHR.status == "401") {
+                alert("로그인 후 이용해주세요");
+                location.href = "/members/login";
+              } else {
+                alert(jqXHR.responseText);
+              }
+            },
+          });
+        }
       }
 
       function orders() {
@@ -148,7 +150,7 @@
               alert("로그인 후 이용해주세요");
               location.href = "/members/login";
             } else {
-              alert(jqXHR.responseJSON.message);
+              alert(jqXHR.responseText);
             }
           },
         });
